syntax = "proto3";

package dog;
option go_package = "github.com/savageking-io/savagedog/proto";

service DogService {
  rpc Notification(dog.NotificationMessage) returns (dog.NotificationResponse);
}

message MessageField {
  string field_name = 1;
  string field_value = 2;
}

message NotificationMessage {
  string from_service = 1;
  string header = 2;
  string content = 3;
  string sender = 4;
  repeated MessageField fields = 5;
}

message NotificationResponse {
  int32 code = 1;
  string error_text = 2;
}